Added new programmes page

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
         <button class="view-btn" onclick="navigateTo('about')">Read More</button>
       </div>
       <div class="card">
-        <h2>Programming Projects</h2>
+        <h2>Portfolio</h2>
         <p>Check out the various apps, games, and tools I've built.</p>
         <button class="view-btn" onclick="navigateTo('portfolio')">View Projects</button>
       </div>
@@ -139,9 +139,9 @@
       
       <div class="card-grid">
         <div class="card">
-          <h2>Web App 1</h2>
-          <p>This is a web application I made using React and Node.js.</p>
-          <button class="view-btn">View Project</button>
+          <h2>Angry Chickie Clicker</h2>
+          <p>This is a clicker game that I made using scratch</p>
+          <a href="https://scratch.mit.edu/projects/882891335/" target="_blank" rel="noopener noreferrer"><button class="view-btn">View Project</button></a>
         </div>
     
         <div class="card">
